test/tests/stages/9_functions/invalid_types/multiple_function_definitions.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(3)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  )
  ;
  }
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(4)
  ;
  }
